{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 92,
  "lineage": "fd2e749d-5c55-b07a-ce07-20c204d82a31",
  "resources": [
    {
      "module": "module.programming",
      "mode": "managed",
      "type": "aws_instance",
      "name": "programming",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c084bff28b29ca4",
            "arn": "arn:aws:ec2:us-east-1:432883629663:instance/i-0815fd6dc84bfe76d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0815fd6dc84bfe76d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "programming",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037a1aa0dd8755814",
            "private_dns": "ip-10-0-2-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.20",
            "public_ip": "3.81.75.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b7bf3a7490f9c25",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cee273cb9ad853f4",
            "tags": {
              "Name": "programming"
            },
            "tags_all": {
              "Name": "programming"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035e7c1dd54f252da"
            ]
          },
          "dependencies": [
            "module.programming.aws_security_group.programming-sg",
            "module.programming.aws_subnet.programming",
            "module.programming.aws_vpc.programming",
            "module.programming.data.aws_ami.debian"
          ]
        }
      ]
    },
    {
      "module": "module.programming",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:internet-gateway/igw-0196831aadbc68d72",
            "id": "igw-0196831aadbc68d72",
            "owner_id": "432883629663",
            "tags": {
              "Name": "programming IGW"
            },
            "tags_all": {
              "Name": "programming IGW"
            },
            "vpc_id": "vpc-0eba0d4b6d5f82112"
          },
          "dependencies": [
            "module.programming.aws_vpc.programming"
          ]
        }
      ]
    },
    {
      "module": "module.programming",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:route-table/rtb-05d23ddf3e6212f99",
            "id": "rtb-05d23ddf3e6212f99",
            "owner_id": "432883629663",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0196831aadbc68d72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IGW RT"
            },
            "tags_all": {
              "Name": "IGW RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eba0d4b6d5f82112"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.programming.aws_internet_gateway.igw",
            "module.programming.aws_vpc.programming"
          ]
        }
      ]
    },
    {
      "module": "module.programming",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0774bb089f3dabb0b",
            "route_table_id": "rtb-05d23ddf3e6212f99",
            "subnet_id": "subnet-0cee273cb9ad853f4"
          },
          "dependencies": [
            "module.programming.aws_internet_gateway.igw",
            "module.programming.aws_route_table.igw-rt",
            "module.programming.aws_subnet.programming",
            "module.programming.aws_vpc.programming"
          ]
        }
      ]
    },
    {
      "module": "module.programming",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "programming-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-035e7c1dd54f252da",
            "description": "Allow inbound traffic from ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035e7c1dd54f252da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "programming-sg",
            "name_prefix": "",
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "programming-sg"
            },
            "tags_all": {
              "Name": "programming-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eba0d4b6d5f82112"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.programming.aws_vpc.programming"
          ]
        }
      ]
    },
    {
      "module": "module.programming",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "programming",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-0cee273cb9ad853f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee273cb9ad853f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "432883629663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "programming"
            },
            "tags_all": {
              "Name": "programming"
            },
            "vpc_id": "vpc-0eba0d4b6d5f82112"
          },
          "dependencies": [
            "module.programming.aws_vpc.programming"
          ]
        }
      ]
    },
    {
      "module": "module.programming",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "programming",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:vpc/vpc-0eba0d4b6d5f82112",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3f46f00295f15eb",
            "default_route_table_id": "rtb-010e2d88d48d31466",
            "default_security_group_id": "sg-05697a87f203f2de2",
            "dhcp_options_id": "dopt-fabebc9c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eba0d4b6d5f82112",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010e2d88d48d31466",
            "owner_id": "432883629663",
            "tags": {
              "Name": "programming"
            },
            "tags_all": {
              "Name": "programming"
            }
          }
        }
      ]
    }
  ]
}